[gd_scene load_steps=15 format=3 uid="uid://o3xdej4tf14w"]

[ext_resource type="Script" path="res://characters/enemy/enemy.gd" id="1_u5pxm"]
[ext_resource type="Texture2D" uid="uid://d115jhppyj06u" path="res://assets/enemy/Slime1_Walk_full.png" id="2_otv7q"]
[ext_resource type="Script" path="res://characters/enemy/cactus.gd" id="4_2xob6"]
[ext_resource type="Script" path="res://characters/enemy/navigation.gd" id="5_4p0sr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sf84x"]
radius = 5.09902

[sub_resource type="Animation" id="Animation_sehqb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ue563"]
resource_name = "walkDown"
length = 0.90001
loop_mode = 1
step = 0.125
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0, 5, -0.25, 0, 0.25, 0, 6, -0.25, 0, 0.25, 0, 7, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8)
}

[sub_resource type="Animation" id="Animation_evajt"]
resource_name = "walkLeft"
length = 0.875013
loop_mode = 1
step = 0.1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(16, -0.25, 0, 0.25, 0, 17, -0.25, 0, 0.25, 0, 18, -0.25, 0, 0.25, 0, 19, -0.25, 0, 0.25, 0, 20, -0.25, 0, 0.25, 0, 21, -0.25, 0, 0.25, 0, 22, -0.25, 0, 0.25, 0, 23, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8)
}

[sub_resource type="Animation" id="Animation_2i5tb"]
resource_name = "walkRight"
length = 0.90001
loop_mode = 1
step = 0.1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(24, -0.25, 0, 0.25, 0, 25, -0.25, 0, 0.25, 0, 26, -0.25, 0, 0.25, 0, 27, -0.25, 0, 0.25, 0, 28, -0.25, 0, 0.25, 0, 29, -0.25, 0, 0.25, 0, 30, -0.25, 0, 0.25, 0, 31, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8)
}

[sub_resource type="Animation" id="Animation_riy65"]
resource_name = "walkUp"
length = 0.90001
loop_mode = 1
step = 0.1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(8, -0.25, 0, 0.25, 0, 9, -0.25, 0, 0.25, 0, 10, -0.25, 0, 0.25, 0, 11, -0.25, 0, 0.25, 0, 12, -0.25, 0, 0.25, 0, 13, -0.25, 0, 0.25, 0, 14, -0.25, 0, 0.25, 0, 15, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ygxi4"]
_data = {
"RESET": SubResource("Animation_sehqb"),
"walkDown": SubResource("Animation_ue563"),
"walkLeft": SubResource("Animation_evajt"),
"walkRight": SubResource("Animation_2i5tb"),
"walkUp": SubResource("Animation_riy65")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_ud00i"]
radius = 6.7

[sub_resource type="CircleShape2D" id="CircleShape2D_fmeg0"]
radius = 80.0

[sub_resource type="CircleShape2D" id="CircleShape2D_arhhw"]
radius = 120.0

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 5
motion_mode = 1
wall_min_slide_angle = 0.0
safe_margin = 2.0
script = ExtResource("1_u5pxm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_sf84x")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ygxi4")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(0, -1)
scale = Vector2(0.7, 0.731)
texture = ExtResource("2_otv7q")
hframes = 8
vframes = 4

[node name="Cactus" type="Area2D" parent="."]
collision_mask = 3
script = ExtResource("4_2xob6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cactus"]
shape = SubResource("CircleShape2D_ud00i")

[node name="AttackCooldown" type="Timer" parent="Cactus"]
wait_time = 0.3

[node name="Navigation" type="Node2D" parent="." node_paths=PackedStringArray("nav_agent")]
script = ExtResource("5_4p0sr")
nav_agent = NodePath("NavigationAgent2D")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Navigation"]
path_desired_distance = 2.0
target_desired_distance = 1.0
avoidance_enabled = true
radius = 25.0
time_horizon_obstacles = 0.65
debug_path_custom_color = Color(1, 0, 0, 1)

[node name="RecalculateTimer" type="Timer" parent="Navigation"]
wait_time = 0.2
autostart = true

[node name="Aggro" type="Node2D" parent="."]

[node name="AggroRange" type="Area2D" parent="Aggro"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aggro/AggroRange"]
shape = SubResource("CircleShape2D_fmeg0")
debug_color = Color(0.802301, 0, 0.261259, 0.42)

[node name="DeAggroRange" type="Area2D" parent="Aggro"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aggro/DeAggroRange"]
shape = SubResource("CircleShape2D_arhhw")
debug_color = Color(1.92523e-06, 0.573294, 0.208073, 0.42)

[connection signal="body_entered" from="Cactus" to="Cactus" method="_on_body_entered"]
[connection signal="timeout" from="Cactus/AttackCooldown" to="Cactus" method="_on_attack_cooldown_timeout"]
[connection signal="navigation_finished" from="Navigation/NavigationAgent2D" to="Navigation" method="_on_navigation_agent_2d_navigation_finished"]
[connection signal="timeout" from="Navigation/RecalculateTimer" to="Navigation" method="_on_recalculate_timer_timeout"]
[connection signal="body_entered" from="Aggro/AggroRange" to="." method="_on_aggro_range_body_entered"]
[connection signal="body_entered" from="Aggro/AggroRange" to="Navigation" method="_on_aggro_range_body_entered"]
[connection signal="body_exited" from="Aggro/DeAggroRange" to="." method="_on_de_aggro_range_body_exited"]
[connection signal="body_exited" from="Aggro/DeAggroRange" to="Navigation" method="_on_de_aggro_range_body_exited"]
